--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,17 @@ Desktop.ini
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
+assets
+images
 
 # Windows Installer files
 *.cab
 *.msi
 *.msm
 *.msp
+*.rar
+.htaccess
+*.ico
 
 # Windows shortcuts
 *.lnk
