--- a/yii/composer.json
+++ b/yii/composer.json
@@ -18,7 +18,8 @@
         "yiisoft/yii2": ">=2.0.5",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-       "yurkinx/yii2-image": "dev-master"
+       "yurkinx/yii2-image": "dev-master",
+	   "vova07/yii2-imperavi-widget": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
